--- a/index.html
+++ b/index.html
@@ -18,11 +18,34 @@
     <!-- Added Moment JS -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
+    <!-- CSS Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/train.png">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+
 
   <title>Train Scheduler</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+            <div class="jumbotron bg-light text-dark">
+                <h1 class="text-center">
+                    <img src="assets/images/train-logo.png" alt="train-logo">
+                    Where's my train?</h1>
+                <h5 class="text-center">Realtime Train Schedule</h5>
+            </div>
+    </div>
+
+
+
+
+
+    <!-- Javascript -->
+    <script src= "assets/javascript/app.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
