--- a/index.html
+++ b/index.html
@@ -32,12 +32,38 @@
   </head>
   <body>
     <div class="container">
-            <div class="jumbotron bg-light text-dark">
+            <div class="jumbotron bg-transparent text-dark">
                 <h1 class="text-center">
-                    <img src="assets/images/train-logo.png" alt="train-logo">
+                    <img src="assets/images/train-logo.png" id="train-logo" alt="train-logo">
                     Where's my train?</h1>
-                <h5 class="text-center">Realtime Train Schedule</h5>
+                <h5 class="text-center bottom-header">Realtime Train Schedule</h5>
             </div>
+
+            <div class="row">
+
+                    <div class="col-md-12">
+              
+                      <!-- Trains -->
+                      <div class="card mb-4">
+                        <div class="card-header bg-info text-white">Current Train Schedule</div>
+                        <div class="card-body">
+                          <table class="table table-sm table-hover" id='train-table'>
+                            <thead>
+                              <tr>
+                                <th scope="col">Train Name</th>
+                                <th scope="col">Destination</th>
+                                <th scope="col">Frequency (min)</th>
+                                <th scope="col">Next Arrival</th>
+                                <th scope="col">Minutes Away</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
     </div>
 
 
