--- a/index.html
+++ b/index.html
@@ -64,6 +64,38 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="row">
+                        <div class="col-md-12">
+                          <!-- Add Train  -->
+                          <div class="card mb-4">
+                            <div class="card-header bg-info text-white">Add Train</div>
+                            <div class="card-body">
+                  
+                              <!-- Add New Train Form -->
+                              <form>
+                                <div class="form-group">
+                                  <label for="train-name-input">Train Name</label>
+                                  <input class="form-control" id="train-name-input" type="text">
+                                </div>
+                                <div class="form-group">
+                                  <label for="destination-input">Destination</label>
+                                  <input class="form-control" id="destination-input" type="text">
+                                </div>
+                                <div class="form-group">
+                                  <label for="first-trian-time-input">First Train Time (HH:mm - military time)</label>
+                                  <input class="form-control" id="train-time-input" type="text">
+                                </div>
+                                <div class="form-group">
+                                  <label for="frequency-input">Frequency (min)</label>
+                                  <input class="form-control" id="frequency-input" type="text">
+                                </div>
+                                <button class="btn btn-primary" id="add-train-btn">Add Train</button>
+                              </form>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
     </div>
 
 
