--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="col-md-12">
               
                       <!-- Trains -->
-                      <div class="card mb-4">
+                      <div class="card mb-4 table">
                         <div class="card-header bg-info text-white">Current Train Schedule</div>
                         <div class="card-body">
                           <table class="table table-sm table-hover" id='train-table'>
@@ -68,12 +68,12 @@
                   <div class="row">
                         <div class="col-md-12">
                           <!-- Add Train  -->
-                          <div class="card mb-4">
+                          <div class="card mb-4 table">
                             <div class="card-header bg-info text-white">Add Train</div>
                             <div class="card-body">
                   
                               <!-- Add New Train Form -->
-                              <form>
+                              <form id="trian-form">
                                 <div class="form-group">
                                   <label for="train-name-input">Train Name</label>
                                   <input class="form-control" id="train-name-input" type="text">
@@ -97,10 +97,6 @@
                         </div>
                       </div>
     </div>
-
-
-
-
 
     <!-- Javascript -->
     <script src= "assets/javascript/app.js"></script>
